Moved narrow sizing for images to CSS file

--- a/discord-theme.css
+++ b/discord-theme.css
@@ -533,6 +533,11 @@ body.light .post:hover, body.light .post:hover .timestamp .date { background: #f
 	visibility: hidden;
 }
 .photo-wrapper:hover .highres { visibility: visible }
+/* Addon to glenthemes' NPF photoset fix; makes images narrower */
+.npf_inst > .tmblr-full img,
+body .post div.npf_row {
+	width: min(650px, 100%);
+}
 blockquote,
 p.npf_quote {
 	padding-right: 0.5em;
