--- a/discord-theme.css
+++ b/discord-theme.css
@@ -364,6 +364,7 @@ body.light .tmblr-iframe {
 	width: 1em;
 	color: var(--text-muted);
 }
+body.dark #light, body.light #dark { display: none }
 #navigate {
 	width: calc(100% - var(--left));
 	bottom: 0;
