--- a/discord-theme.css
+++ b/discord-theme.css
@@ -616,6 +616,15 @@ a.boxquote, .npf-link-block > a { border-left-color: var(--link); }
 .boxquote.chat li, .post .content p.npf_chat { margin: 0; padding: 0.5em; }
 .boxquote.chat li.even, .post .content p.npf_chat:nth-child(even) { background: var(--channels-hover); }
 .post .content p.npf_chat { border-radius: 0; font-family: var(--font-normal); }
+pre, code {
+	font-family: "Consolas", "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Monaco", "Courier New", "Courier", monospace;
+	font-size: .85em;
+	color: var(--secondary);
+	background-color: var(--sidebar);
+	border-radius: 0.25em;
+	padding: 0.2em;
+	margin: -0.2em 0;
+}
 
 
 
